--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,21 +2,22 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * *"  # roda todo dia à meia-noite
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Generate the snake
-      uses: Platane/snk@v3
-      with:
-    github_user_name: guuholivee
-    outputs: |
-      dist/github-contribution-grid-snake.svg
-    color_snake: "#00FF99" # verde neon
-    color_dots: "#444444,#393939,#2e2e2e,#00FFC3,#00AA88"
+      - name: Generate the snake in dark mode
+        uses: Platane/snk@v3
+        with:
+          github_user_name: guuholivee
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+          # Estilização para dark mode
+          color_snake: "#00FF99" # Verde neon
+          color_dots: "#444444,#393939,#2e2e2e,#00FFC3,#00AA88"
 
       - name: Deploy to GitHub Pages (output branch)
         uses: crazy-max/ghaction-github-pages@v4
